# webserv2.0

./: .gitignore  CMakeLists.txt  Client.cpp  Client.hpp  Config.cpp  Config.hpp  ParseConfig.cpp  ParseConfig.hpp  ParseRequest.hpp  README.md  StringUtils.cpp  StringUtils.hpp  TODO.txt  defaultChromeReqReference  index.html  parser.cpp  parser.hpp  server.cpp  server.hpp  webserv.conf
CGI_script/: script.py
config/: webserv.conf
error_pages/: 403.html  404.html  500.html  directory_list_reference.html
include/: AConfigBlock.hpp  ADirectives.hpp  AParser.hpp  Client.hpp  Config.hpp  Environment.hpp  Location.hpp  ParseConfig.hpp  ParseRequest.hpp  RequestHandler.hpp  ResolvedAction.hpp  ServerConfig.hpp  StringUtils.hpp  httpRequest.hpp  pathUtils.hpp  server.hpp
src/: AConfigBlock.cpp  ADirectives.cpp  AParser.cpp  Client.cpp  Config.cpp  Environment.cpp  Location.cpp  ParseConfig.cpp  ParseRequest.cpp  RequestHandler.cpp  ServerConfig.cpp  StringUtils.cpp  httpRequest.cpp  main.cpp  server.cpp
